--- a/scripts/plotting.ipynb
+++ b/scripts/plotting.ipynb
@@ -59,7 +59,7 @@
     "week = {}\n",
     "for i in range(1, 18):\n",
     "    week[i] = pd.read_csv('week' + str(i) + '.csv')\n",
-    "    week[i]['nflId'] = week[i][nflId].fillna(0.)\n",
+    "    week[i]['nflId'] = week[i]['nflId'].fillna(0.)\n",
     "    week[i] = week[i].merge(df_players, on='nflId')\n",
     "    print(f'week {i} done!')"
    ]
