--- a/scripts/plotting.ipynb
+++ b/scripts/plotting.ipynb
@@ -23,7 +23,8 @@
     "df_games = pd.read_csv('games.csv')\n",
     "df_plays = pd.read_csv('plays.csv')\n",
     "df_players = pd.read_csv('players.csv')\n",
-    "df_plays = df_plays.merge(df_games)"
+    "df_plays = df_plays.merge(df_games)\n",
+    "df_players.loc[len(df_players.index)] = [0, np.nan, np.nan, np.nan, np.nan, 'football', 'Football']"
    ]
   },
   {
@@ -60,7 +61,8 @@
     "for i in range(1, 18):\n",
     "    week[i] = pd.read_csv('week' + str(i) + '.csv')\n",
     "    week[i]['nflId'] = week[i]['nflId'].fillna(0.)\n",
-    "    week[i] = week[i].merge(df_players, on='nflId')\n",
+    "    week[i]['position'] = week[i]['position'].fillna('football')\n",
+    "    week[i] = week[i].merge(df_players, on=['nflId', 'displayName', 'position'])\n",
     "    print(f'week {i} done!')"
    ]
   },
@@ -88,37 +90,23 @@
    "outputs": [],
    "source": [
     "# function that's called frame by frame when animating \n",
-    "def get_play_by_frame(i, ax, play): \n",
+    "def get_play_by_frame(i, ax, play, metadata): \n",
     "    ax.cla()\n",
     "    one_frame = play.loc[play['frameId']==i]\n",
-    "    play_id = int(one_frame['playId'].unique())\n",
-    "    game_id = int(play['gameId'].unique())\n",
-    "\n",
-    "    home = df_games.loc[df_games['gameId']==game_id]['homeTeamAbbr'].unique()[0]\n",
-    "    away = df_games.loc[df_games['gameId']==game_id]['visitorTeamAbbr'].unique()[0]\n",
-    "    colors = {'home': team_colors_primary[home],\n",
-    "              'away': team_colors_primary[away],\n",
-    "              'football': '#955500'}\n",
-    "    sizes = {'home': 50,\n",
-    "             'away': 50,\n",
-    "             'football': 10}\n",
     "    \n",
     "    fig1 = sns.scatterplot(x='x', y='y', data=one_frame, \n",
-    "                           hue='team', palette=colors, \n",
-    "                           size='team', sizes=sizes, ax=ax)\n",
+    "                           hue='team', palette=metadata['colors'], \n",
+    "                           size='team', sizes=metadata['sizes'], ax=ax)\n",
     "    \n",
-    "    dist = int(df_plays.loc[(df_plays['gameId']==game_id) & (df_plays['playId']==play_id)]['yardsToGo'].unique())\n",
-    "    los = play.loc[(play['frameId']==1) & (play['team']=='football'), 'x'].round(0).astype(int).values[0]\n",
-    "    fig1.axvline(los, c='blue', ls=':')\n",
+    "    fig1.axvline(metadata['los'], c='blue', ls=':')\n",
     "    fig1.axvline(10, c='k', ls='-')\n",
     "    fig1.axvline(110, c='k', ls='-')\n",
     "    \n",
-    "    qb_x = play.loc[(play['frameId']==1) & (play['position']=='QB'), 'x'].round(0).astype(int).values[0]\n",
-    "    if qb_x < los:\n",
-    "        fig1.axvline(los+dist, c='y', ls=':')\n",
+    "    if metadata['drive_right']:\n",
+    "        fig1.axvline(metadata['los'] + metadata['dist'], c='y', ls=':')\n",
     "    else:\n",
-    "        fig1.axvline(los-dist, c='y', ls=':')\n",
-    "        \n",
+    "        fig1.axvline(metadata['los'] - metadata['dist'], c='y', ls=':')\n",
+    "    \n",
     "    for player_id in one_frame['nflId'].unique():\n",
     "        if player_id > 0:\n",
     "            player_x = float(one_frame.loc[one_frame['nflId']==player_id]['x'])\n",
@@ -130,6 +118,7 @@
     "                                                                                        'weight': 'bold'})\n",
     "    fig1.legend([]).set_visible(False)\n",
     "    sns.despine(left=True)\n",
+    "    ax.set_title("2018 Week " + str(metadata['week_num']) + ", " + metadata['away'] + " @ " + metadata['home'] + ".\nQtr " + str(metadata['quarter']) + ", " + "(" + str(metadata['game_time']) + "). " + metadata['pos_team'] + " ball, " + str(metadata['down']) + " & " + str(metadata['dist']) + ".", fontdict={'fontsize':16})\n",  
     "    fig1.set_ylabel('')\n",
     "    fig1.set_yticks([])\n",
     "    fig1.set_xlabel('Yardline')\n",
@@ -153,16 +142,42 @@
     "    week_num = int(play['week'].unique())\n",
     "    play = week[week_num].merge(play.loc[:, ['gameId', 'playId']])\n",
     "    \n",
+    "    metadata = {}\n",
+    "    metadata['play_id'] = int(play['playId'].unique())\n",
+    "    metadata['game_id'] = int(play['gameId'].unique())\n",
+    "    metadata['home'] = df_games.loc[df_games['gameId']==game_id]['homeTeamAbbr'].unique()[0]\n",
+    "    metadata['away'] = df_games.loc[df_games['gameId']==game_id]['visitorTeamAbbr'].unique()[0]\n",
+    "    metadata['colors'] = {'home': team_colors_primary[metadata['home']], 'away': team_colors_primary[metadata['away']], 'football': '#955500'}\n",
+    "    metadata['sizes'] = {'home': 50, 'away': 50, 'football': 10}\n",
+    "    metadata['dist'] = int(df_plays.loc[(df_plays['gameId']==game_id) & (df_plays['playId']==play_id)]['yardsToGo'].unique())\n",
+    "    metadata['los'] = play.loc[(play['frameId']==1) & (play['team']=='football'), 'x'].round(0).astype(int).values[0]\n",
+    "    qb_x = play.loc[(play['frameId']==1) & (play['position']=='QB'), 'x'].round(0).astype(int).values[0]\n",
+    "    metadata['drive_right'] = qb_x < metadata['los']\n",
+    "    metadata['week_num'] = df_plays.loc[(df_plays['gameId']==game_id)&(df_plays['playId']==play_id)]['week'].unique()[0]\n",
+    "    metadata['quarter'] = df_plays.loc[(df_plays['gameId']==game_id)&(df_plays['playId']==play_id)]['quarter'].unique()[0]\n",
+    "    metadata['game_time'] = ':'.join(df_plays.loc[(df_plays['gameId']==game_id)&(df_plays['playId']==play_id)]['gameClock'].unique()[0].split(':')[:-1])\n",
+    "    metadata['pos_team'] = df_plays.loc[(df_plays['gameId']==game_id)&(df_plays['playId']==play_id)]['possessionTeam'].unique()[0]\n",
+    "    down = df_plays.loc[(df_plays['gameId']==game_id)&(df_plays['playId']==play_id)]['down'].unique()[0]\n",
+    "    if down == 1:\n",
+    "        metadata['down'] = str(down) + 'st'\n",
+    "    elif down == 2:\n",
+    "        metadata['down'] = str(down) + 'nd'\n",
+    "    elif down == 3:\n",
+    "        metadata['down'] = str(down) + 'rd'\n",
+    "    elif down == 4:\n",
+    "        metadata['down'] = str(down) + 'th'\n",
+    "    else:\n",
+    "        raise ValueError\n",
     "    \n",
     "    Writer = animation.writers['pillow']\n",
     "    writer = Writer(fps=10, metadata=dict(artist='Me'), bitrate=1800)\n",
-    "\n",
+    "    \n",
     "    fig = plt.figure(figsize=(10,4.5), dpi=200)\n",
     "    ax = fig.gca()\n",
     "    ax.set_facecolor('darkgreen')\n",
     "    ani = animation.FuncAnimation(fig, get_play_by_frame, \n",
     "                             np.arange(1, play['frameId'].sort_values().unique().shape[0]),\n",
-    "                             interval=100, repeat=True, fargs=(ax, play))\n",
+    "                             interval=100, repeat=True, fargs=(ax, play, metadata))\n",
     "    plt.show()\n",
     "    ani.save(str(game_id)+'_'+str(play_id)+'.gif', writer=writer)"
    ]
